:tada: alterações docs

--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
-API_V1_STR="/api/v1"
+DEBUG=True
+ALLOOW_CREDENTIALS=True
+PORT=8000
+HOST="0.0.0.0"
+LOG_LEVEL="info"
 PROJECT_NAME="I.A."
+API_V1_STR="/api/v1"
+ORIGINS="http://localhost:8080"
